apps/utilities/actual-budget/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-budget
  namespace: utilities
  labels:
    app: actual-budget
    tier: utilities
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure # web for HTTP, websecure for HTTPS. Can use both by separating with comma: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-geoblock@kubernetescrd, kube-system-fail2ban@kubernetescrd # Example of using a middleware to block certain countries (redumdant for internal apps)
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: actual-budget.shiba-toast.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actual-budget
                port:
                  number: 80
  tls:
    - hosts:
        - actual-budget.shiba-toast.com
      secretName: actual-budget-tls
